@@ -1,7 +1,7 @@
 .\"
-.\" $Id: smi_module.3.in,v 1.2 2000/02/11 16:42:32 strauss Exp $
+.\" $Id: smi_module.3.in,v 1.3 2000/02/11 23:19:09 strauss Exp $
 .\"
-.TH smi_module 3  "February 11, 2000" "IBR" "SMI Management Information Library"
+.TH smi_module 3  "November 6, 2000" "IBR" "SMI Management Information Library"
 .SH NAME
 .\" START OF MAN PAGE COPIES
 smiGetModule,
@@ -57,6 +57,7 @@ typedef struct SmiModule {
     char                *description;
     char                *reference;
     SmiLanguage         language;
+    int                 conformance;
 } SmiModule;
 
 typedef struct SmiRevision {
